# 3d-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  tatus
buildTool/: main.cpp
codeGenTool/: targetAddGenerated.cmake
codeGenTool/src/: DataFile.java  Lexer.java  Main.java  Parser.java  dataFileCpp.stg  dataFileHpp.stg  shader.stg
dependencies/imgui/: imconfig.h
electromagnetism/: CMakeLists.txt  MainLoop.cpp  MainLoop.hpp  main.cpp
embedTool/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  Engine.cpp  Log.hpp  Window.cpp  Window.hpp
engine/Graphics/: Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Vbo.hpp
engine/Input/: Input.cpp  Input.hpp  InputUtils.cpp  KeyCode.hpp
engine/Math/: Aabb.cpp  Aabb.hpp  Aabb3.hpp  Angles.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Color.hpp  FourierTransform.cpp  FourierTransform.hpp  Frustum.cpp  Frustum.hpp  IntersectLineSegments.cpp  IntersectLineSegments.hpp  Line.cpp  LineSegment.cpp  LineSegment.hpp  MarchingSquares.cpp  MarchingSquares.hpp  Mat2.hpp  Mat3.hpp  Mat4.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Plane.cpp  Plane.hpp  Quat.hpp  Random.cpp  Random.hpp  Utils.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  math.natvis  math.txt
engine/Math/Matrix/: Arithmetic.hpp  GaussianElimination.hpp  Matrix.txt  Utils.hpp
engine/Math/RootFinding/: bisection.hpp  newton.hpp
engine/Utils/: Array2d.hpp  Bits.cpp  Bits.hpp  BlockAllocator.hpp  Dbg.hpp  FileIo.cpp  FileIo.hpp  Gui.cpp  Gui.hpp  Image32.cpp  Image32.hpp  Json.cpp  Json.hpp  JsonFileIo.cpp  JsonFileIo.hpp  Put.cpp  Put.hpp  RandomAccess2d.hpp  Span.hpp  Span2d.hpp  StringRefStream.cpp  StringRefStream.hpp  StringUtils.cpp  StringUtils.hpp  Timer.cpp  Timer.hpp  Unwrap.hpp
framework/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraMovement.hpp  CameraUtils.hpp  Dbg.cpp  Dbg.hpp  FullscrenQuadPt.hpp  ImageRenderer.cpp  ImageRenderer.hpp  Instancing.hpp  Renderer2d.cpp  Renderer2d.hpp  ShaderManager.cpp  ShaderManager.hpp  ShapeRenderer2d.cpp  ShapeRenderer2d.hpp
framework/FontRendering/: Font.cpp  Font.hpp  FontRenderer.cpp  FontRenderer.hpp
framework/Shaders/: basicText.frag  basicText.vert  circle.frag  circleShader.data  disk.frag  disk.vert  diskShader.data  filledAabb.data  filledAabb.frag  filledAabb.vert  filledTriangle.vert  fullscreenQuad.data  fullscreenQuad.vert  line.frag  line.vert  lineShader.data  texturedQuad.data
framework/Shaders/Utils/: sdf.glsl
game/: AdaptiveSample.cpp  AdaptiveSample.hpp  CMakeLists.txt  FpsController.cpp  FpsController.hpp  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  main.cpp  renderer_api.txt
game/DepthPeeling/: frontBlend.frag  frontBlend.vert  frontFinal.frag  frontFinal.vert  frontInit.frag  frontPeel.frag
game/Shaders/: basicShading.data  basicShading.frag  basicShading.vert  infiniteLine.data  infiniteLine.frag  infiniteLine.vert  (+3 more)
platformer/: Assets.cpp  Assets.hpp  Blocks.cpp  Blocks.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Constants.cpp  Constants.hpp  Editor.cpp  Editor.hpp  EditorSettings.data  Entities.cpp  Entities.hpp  EntityArray.hpp  Game.cpp  Game.hpp  GameAudio.cpp  GameAudio.hpp  GameInput.hpp  GameRenderer.cpp  GameRenderer.hpp  GameRoom.cpp  GameRoom.hpp  JsonUtils.cpp  JsonUtils.hpp  Level.cpp  Level.data  Level.hpp  MainLoop.cpp  MainLoop.hpp  Menu.cpp  Menu.hpp  Paths.hpp  Player.cpp  Player.hpp  Settings.data  SettingsManager.cpp  SettingsManager.hpp  SoundGeneration.cpp  (+5 more)
platformer/Assets/levels/: level0  level1
platformer/Audio/: Audio.cpp  Audio.hpp  AudioBuffer.cpp  AudioBuffer.hpp  AudioErrorHandling.cpp  AudioFileStream.cpp  AudioFileStream.hpp  AudioSource.cpp  AudioSource.hpp  AudioStream.cpp  AudioStream.hpp  LoadWav.cpp  LoadWav.hpp
platformer/Shaders/: attractingOrb.data  attractingOrb.frag  attractingOrb.vert  background.data  background.frag  background.vert  blocks.data  blocks.frag  blocks.vert  doubleJumpOrb.data  doubleJumpOrb.frag  doubleJumpOrb.txt  doubleJumpOrb.vert  grid.data  grid.frag  grid.vert  player.data  player.frag  player.vert  spikeCenter.data  spikeCenter.frag  spikeCenter.vert  spikeClosedCorner.data  spikeClosedCorner.frag  spikeClosedCorner.vert  spikeOpenCorner.data  spikeOpenCorner.frag  spikeOpenCorner.vert  spikeShared.glsl
platformer/Shaders/Utils/: noise2.glsl  noise3.glsl
test/: CMakeLists.txt
test/engine/Math/Matrix/: Arithmetic.cpp  GaussianElimination.cpp
test/engine/Utils/: Span2d.cpp
water_rendering/: CMakeLists.txt  MainLoop.cpp  MainLoop.hpp  SavableUniforms.hpp  ShaderManager.cpp  SkyboxSettingsData - Copy.glsl  cubemapFragUniforms.json  main.cpp  skyboxSettings.json  waterShaderFragUniforms.json  waterShaderVertUniforms.json
water_rendering/Shaders/: SkyboxSettings.data  cubemapShader.data  cubemapShader.frag  cubemapShader.vert  debugPointShader.data  debugPointShader.frag  debugPointShader.vert  heightMapShader.data  heightMapShader.frag  heightMapShader.vert  sampleSkybox.glsl  waterDepth.glsl  waterShader.data  waterShader.frag  waterShader.vert  waves.glsl
water_rendering/Shaders/Utils/: blend.glsl  perlin2d.glsl
water_simulation/: AdvecitonDemo.cpp  AdvectionDemo.hpp  CMakeLists.txt  Camera3d.cpp  Camera3d.hpp  Continous2dSystemVisualization.cpp  Continous2dSystemVisualization.hpp  Eigenvectors.cpp  Eigenvectors.hpp  EulerianFluid.cpp  EulerianFluid.hpp  EulerianFluidDemo.cpp  EulerianFluidDemo.hpp  FirstOrderSystemGraph.cpp  FirstOrderSystemGraph.hpp  FlipPicFluid.cpp  FlipPicFluid.hpp  FlipPicFluidDemo.cpp  FlipPicFluidDemo.hpp  Fluid.cpp  Fluid.hpp  FunctionPlotter2d.cpp  FunctionPlotter2d.hpp  GraphDemo.cpp  GraphDemo.hpp  GuiWindowManager.cpp  GuiWindowManager.hpp  IndexedMesh.hpp  IntegrationDemo.cpp  IntegrationDemo.hpp  LineRenderer.cpp  LineRenderer.hpp  MainLoop.cpp  MainLoop.hpp  MainLoopOld.cpp  MainLoopOld.hpp  MatrixDemo.cpp  MatrixDemo.hpp  OrthogonalDemo.cpp  OrthogonalDemo.hpp  (+29 more)
water_simulation/Shaders/: line3Shader.data  line3Shader.frag  line3Shader.vert  plotShader.data  plotShader.frag  plotShader.vert  texturedQuad.data  texturedQuad.frag
(+2 files in other folders)
